--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,10 +42,27 @@
     <string name="codebattles">CodeBattle</string>
     <string name="das">Դաս</string>
     <string name="modul">Մոդուլ</string>
-    <string name="zip_rar_winrar">Հարգելի՛ ուսանող, առաջադրանքն անհրաժեշտ է ուղարկել միայն zip կամ rar ֆորմատներով, ինչը հնարավոր է ստանալ WinRar ծրագրի օգնությամբ:</string>
+    <string name="zip_rar_winrar"> Հարգելի՛ ուսանող, առաջադրանքն անհրաժեշտ է ուղարկել միայն zip կամ rar ֆորմատներով, ինչը հնարավոր է ստանալ WinRar ծրագրի օգնությամբ:</string>
     <string name="upload_8mb">Upload -ի առավելագույն ծավալը 8MB</string>
     <string name="w">Ուղարկել առաջադրանքը</string>
     <string name="ww">ՎԵՐԲԵՌՆԵԼ</string>
     <string name="n_n">*Արդյո՞ք դասն արդյունավետ էր  * Արդյո՞ք նյութը մատուցվել է պարզ և մատչելի   *Արդյո՞ք կարգապահությունը լսարանում պահպանված է պատշաճ մակարդակով</string>
+    <string name="_407_20_000"><b> Հեղինակ՝</b> Արմեն Մարջինյան \n\n
+        <b>Խմբագրությամբ՝</b> Մանկավարժական գիտությունների թեկնածու, դոցենտ Սամվել Ասատրյանի\n\n
+        <b>Տեխնիկական խմբագիր՝</b> Պրոֆայթի ուսումնական կենտրոնի դասախոս, Անահիտ Արամյան\n\n  <b>Տպագրությունը՝</b> գունավոր\n  <b>Էջերի քանակ՝</b> 407 \n
+        <b>Մեկ գրքի արժեքը՝</b> 20.000 ԴՐԱՄ</string>
+    <string name="javascript"> Հարգելի՛ ուսանող,<b> JavaScript ծրագրավորման լեզվի տարրերը</b> ուսումնական ձեռնարկը
+        ստեղծվել է Պրոֆայթի ուսումնական կենտրոնում, Ձեր ուսումնառության որակը ևս
+        մեկ մակարդակով բարձրացնելու համար: Դասագրքի օգնությամբ Դուք կկարողանաք
+        գերազանց տիրապետել JavaScript -ին, jQuery -ին, OOP -ին, ինչպես նաև կկարողանաք ստեղծել տարբեր
+        խաղեր, հետաքրքր հավելվածներ Canvas -ի, Ajax -ի օգնությամբ: Այստեղ քննարկված են JavaScript -ի
+        ամեանավերջին նորույթները, որոնք կօգնեն Ձեզ խորապես պատկերացնել frontend ծրագրավորման գործընթացը
+        և լինել որակյալ ծրագրավորող:\n Դասագիրքն ունի մի քանի առավելություններ.</string>
+    <string name="js_js_0"> 1.  Առաջին մասնագիտական JS ուսումնական ձեռնարկն է հայերենով,
+        \n 2.  Ձեռնարկում ներկայացված է JS -ը 0 -ից մինչ պրոֆեսիոնալ ծրագրավորման մակարդակ
+        \n 3.  Ձեռնարկի լեզուն և ոճը հարմար է ինքնուսուցման
+        \n 4.  Տեսական բացատրությունները հիմնավորվում են կոնկրետ գործնական առաջադրանքներով ու
+        վարժություններով, որոնց կատարման ընթացքը նույնպես տրված է
+        \n 5.  Ձեռնարկը խիստ կիրառական է</string>
 
 </resources>
