--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,8 +20,13 @@
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
-    <string name="codebattle">CodeBattle խաղը կօգնի Ձեզ զարգացնել Ձեր տրամաբանությունը, կոդ գրելու կարողությունը և ալգորիթմական մտածելակերպը տարբեր բարդության խնդիրներ լուծելու միջոցով</string>
-    <string name="yntrum_enq">  * Ընտրում ենք ակտիվ խնդիրը, որը պատկերված է կանաչ գույնով\n * Գրում ենք խնդիրը լուծող ֆունկցիան JavaScript ծրագրավորման լեզվով\n * Խնդիրը կարող եք գրել Ձեր կողմից նախընտրելի խմբագրիչով (օրինակ sublime)\n * Արդյունքը պետք է տեղադրել մեր խմբագրիչում և սեղմել ՍՏՈՒԳԵԼ\n * Եթե կան սխալներ, անհրաժեշտ է ուղղել դրանք Եթե համակարգը հաստատեց, որ խնդիրը ճիշտ է լուծված, ապա ընտրեք ՈՒՂԱՐԿԵԼ \n * Այսպիսով կակտիվանա հաջորդ խնդիրը</string>
+    <string name="codebattle">CodeBattle խաղը կօգնի Ձեզ զարգացնել Ձեր տրամաբանությունը, կոդ գրելու կարողությունը
+        և ալգորիթմական մտածելակերպը տարբեր բարդության խնդիրներ լուծելու միջոցով</string>
+    <string name="yntrum_enq">  * Ընտրում ենք ակտիվ խնդիրը, որը պատկերված է կանաչ գույնով\n * Գրում ենք խնդիրը լուծող
+        ֆունկցիան JavaScript ծրագրավորման լեզվով\n * Խնդիրը կարող եք գրել Ձեր կողմից նախընտրելի խմբագրիչով
+        (օրինակ sublime)\n * Արդյունքը պետք է տեղադրել մեր խմբագրիչում և սեղմել ՍՏՈՒԳԵԼ\n * Եթե կան սխալներ, անհրաժեշտ
+        է ուղղել դրանք Եթե համակարգը հաստատեց, որ խնդիրը ճիշտ է լուծված,
+        ապա ընտրեք ՈՒՂԱՐԿԵԼ \n * Այսպիսով կակտիվանա հաջորդ խնդիրը</string>
     <string name="xax">Խաղը ստեղծված է CodeFights, LeetCode, CodeByte, DevSkill խաղերի մոտիվներով</string>
 
     <string name="title_activity_code_battle">CodeBattleActivity</string>
@@ -42,14 +47,17 @@
     <string name="codebattles">CodeBattle</string>
     <string name="das">Դաս</string>
     <string name="modul">Մոդուլ</string>
-    <string name="zip_rar_winrar"> Հարգելի՛ ուսանող, առաջադրանքն անհրաժեշտ է ուղարկել միայն zip կամ rar ֆորմատներով, ինչը հնարավոր է ստանալ WinRar ծրագրի օգնությամբ:</string>
+    <string name="zip_rar_winrar">  Հարգելի՛ ուսանող, առաջադրանքն անհրաժեշտ է ուղարկել միայն zip կամ rar
+        ֆորմատներով, ինչը հնարավոր է ստանալ WinRar ծրագր օգնությամբ:</string>
     <string name="upload_8mb">Upload -ի առավելագույն ծավալը 8MB</string>
     <string name="w">Ուղարկել առաջադրանքը</string>
     <string name="ww">ՎԵՐԲԵՌՆԵԼ</string>
-    <string name="n_n">*Արդյո՞ք դասն արդյունավետ էր  * Արդյո՞ք նյութը մատուցվել է պարզ և մատչելի   *Արդյո՞ք կարգապահությունը լսարանում պահպանված է պատշաճ մակարդակով</string>
+    <string name="n_n">*Արդյո՞ք դասն արդյունավետ էր  * Արդյո՞ք նյութը մատուցվել է պարզ և մատչելի
+        *Արդյո՞ք կարգապահությունը լսարանում պահպանված է պատշաճ մակարդակով</string>
     <string name="_407_20_000"><b> Հեղինակ՝</b> Արմեն Մարջինյան \n\n
         <b>Խմբագրությամբ՝</b> Մանկավարժական գիտությունների թեկնածու, դոցենտ Սամվել Ասատրյանի\n\n
-        <b>Տեխնիկական խմբագիր՝</b> Պրոֆայթի ուսումնական կենտրոնի դասախոս, Անահիտ Արամյան\n\n  <b>Տպագրությունը՝</b> գունավոր\n  <b>Էջերի քանակ՝</b> 407 \n
+        <b>Տեխնիկական խմբագիր՝</b> Պրոֆայթի ուսումնական կենտրոնի դասախոս, Անահիտ Արամյան\n\n
+        <b>Տպագրությունը՝</b> գունավոր\n  <b>Էջերի քանակ՝</b> 407 \n
         <b>Մեկ գրքի արժեքը՝</b> 20.000 ԴՐԱՄ</string>
     <string name="javascript"> Հարգելի՛ ուսանող,<b> JavaScript ծրագրավորման լեզվի տարրերը</b> ուսումնական ձեռնարկը
         ստեղծվել է Պրոֆայթի ուսումնական կենտրոնում, Ձեր ուսումնառության որակը ևս
@@ -64,5 +72,8 @@
         \n 4.  Տեսական բացատրությունները հիմնավորվում են կոնկրետ գործնական առաջադրանքներով ու
         վարժություններով, որոնց կատարման ընթացքը նույնպես տրված է
         \n 5.  Ձեռնարկը խիստ կիրառական է</string>
+    <string name="bari"><b>ԲԱՐԻ ԳԱԼՈՒՍՏ</b></string>
+    <string name="mutq">Մուտք դեպի համակարգ</string>
+    <string name="javascripts"><b>JavaScript ծրագրավորման լեզվի տարրերը</b></string>
 
 </resources>
