--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Պրոֆայթի ուսումնական կենտրոն</string>
+    <string name="notification_activity">NotificationView</string>
     <!-- Strings related to login -->
     <string name="prompt_username">Մուտքանուն...</string>
     <string name="prompt_email">Email</string>
