--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -89,5 +89,6 @@
     <string name="textAreErku">Ի՞նչ դժգոհություններ ունեք</string>
     <string name="textAreMek">Ի՞նչ առաջարկություններ ունեք</string>
     <string name="aa">Հարգելի՛ ուսանող, առաջադրանքն անհրաժեշտ է ուղարկել միայն zip կամ rar ֆորմատներով, ինչը հնարավոր է ստանալ WinRar ծրագրի օգնությամբ:</string>
+    <string name="snooze">snooze</string>
 
 </resources>
