--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -90,5 +90,8 @@
     <string name="textAreMek">Ի՞նչ առաջարկություններ ունեք</string>
     <string name="aa">Հարգելի՛ ուսանող, առաջադրանքն անհրաժեշտ է ուղարկել միայն zip կամ rar ֆորմատներով, ինչը հնարավոր է ստանալ WinRar ծրագրի օգնությամբ:</string>
     <string name="snooze">snooze</string>
+    <string name="hargeli">Հարգելի՛ ուսանող, խնդրում ենք պատասխանել ուսուցման որակի բարելավմանը միտված ստորև բերված հարցերին:</string>
+    <string name="harcer">Հարցերը և պատասխանները, առանց ուսանողի տվյալների, ուղարկվում են Պրոֆայթի ուսումնական կենտրոնի ուսուցման որակի վերահսկողության բաժին</string>
+    <string name="arm">ՊՐՈՖԱՅԹԻ ՈՒՍՈՒՄՆԱԿԱՆ ԿԵՆՏՐՈՆ  © ԱՐՄԵՆ ՄԱՐՋԻՆՅԱՆ</string>
 
 </resources>
