--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -92,6 +92,6 @@
     <string name="snooze">snooze</string>
     <string name="hargeli">Հարգելի՛ ուսանող, խնդրում ենք պատասխանել ուսուցման որակի բարելավմանը միտված ստորև բերված հարցերին:</string>
     <string name="harcer">Հարցերը և պատասխանները, առանց ուսանողի տվյալների, ուղարկվում են Պրոֆայթի ուսումնական կենտրոնի ուսուցման որակի վերահսկողության բաժին</string>
-    <string name="arm">ՊՐՈՖԱՅԹԻ ՈՒՍՈՒՄՆԱԿԱՆ ԿԵՆՏՐՈՆ  © ԱՐՄԵՆ ՄԱՐՋԻՆՅԱՆ</string>
+    <string name="arm">ՊՐՈՖԱՅԹԻ ՈՒՍՈՒՄՆԱԿԱՆ ԿԵՆՏՐՈՆ \n  © ԱՐՄԵՆ ՄԱՐՋԻՆՅԱՆ</string>
 
 </resources>
